@@ -602,6 +602,12 @@ let userinfo uri = match uri.userinfo with
   | Some userinfo -> Some (Pct.uncast_encoded (match uri.scheme with
     | None -> encoded_of_userinfo userinfo
     | Some s -> encoded_of_userinfo ~scheme:(Pct.uncast_decoded s) userinfo))
+
+let with_userinfo uri =
+  function
+  | Some u -> { uri with userinfo=Some (userinfo_of_encoded u) }
+  | None -> { uri with userinfo=None }
+
 let host uri = get_decoded_opt uri.host
 let with_host uri =
   function
